--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@eslint/js": "^9.35.0",
     "@feature-sliced/steiger-plugin": "^0.5.7",
+    "@reduxjs/toolkit": "^2.9.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
@@ -25,6 +26,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
+    "react-redux": "^9.2.0",
     "steiger": "^0.5.11",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.43.0",
