--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "devDependencies": {
     "@eslint/js": "^9.35.0",
     "@feature-sliced/steiger-plugin": "^0.5.7",
+    "@headlessui/react": "^2.2.9",
+    "@hookform/resolvers": "^5.2.2",
     "@reduxjs/toolkit": "^2.9.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
@@ -26,11 +28,14 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
+    "react-hook-form": "^7.64.0",
     "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
     "steiger": "^0.5.11",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.43.0",
     "vite": "^7.1.6",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "zod": "^4.1.12"
   }
 }
