--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
+    "dev:vite": "vite",
+    "build:vite": "tsc -b && vite build",
+    "build:esbuild:app": "esbuild src/lesson7/app/index.ts --bundle --minify --sourcemap --outdir=src/lesson7/dist/app.js --splitting --format=esm",
+    "build:esbuild:lib": "tsx src/lesson7/config/esbuild-lib.config.ts",
+    "dev:esbuild": "tsx src/lesson7/config/esbuild-dev.config.ts",
+    "build:esbuild": "tsx src/lesson7/config/esbuild-prod.config.ts",
+    "build:lib:swc": "tsx build-lib-swc.ts",
     "lint": "eslint .",
     "fsd": "npx steiger ./src",
     "preview": "vite preview"
@@ -21,17 +26,24 @@
     "@headlessui/react": "^2.2.9",
     "@hookform/resolvers": "^5.2.2",
     "@reduxjs/toolkit": "^2.9.0",
+    "@swc/cli": "^0.7.8",
+    "@swc/core": "^1.13.5",
+    "@types/lodash": "^4.17.20",
+    "@types/node": "^24.8.1",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
+    "esbuild": "^0.25.11",
     "eslint": "^9.35.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
+    "lodash": "^4.17.21",
     "react-hook-form": "^7.64.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
     "steiger": "^0.5.11",
+    "tsx": "^4.20.6",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.43.0",
     "vite": "^7.1.6",
